# lazy-link

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/windows-msgbox/: Cargo.toml
examples/windows-msgbox/src/: main.rs
lazy_link/: Cargo.toml
lazy_link/src/: cache.rs  lib.rs
lazy_link/tests/: arguments.rs  module.rs  resolve_nocache.rs  resolve_static_atomic.rs  resolve_static_cache.rs
lazy_link/tests/ui/: no_resolver.rs  no_resolver.stderr  static_member.rs  static_member.stderr  unknown_attribute.rs  unknown_attribute.stderr
lazy_link_derive/: Cargo.toml  README.MD
lazy_link_derive/src/: lib.rs  macro_lazy_link.rs
