[package]
name = "lazy_link"
license-file.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true

[dependencies]
lazy_link_derive = { path = "../lazy_link_derive", version = "0.1" }
obfstr = "0.4.3"

[dev-dependencies]
trybuild = "1.0.99"
